fix long item names overflowing on cart page

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -117,9 +117,9 @@
 
 .item-top-half
   +flexbox
-  +align-items(center)
+  +align-items(flex-start)
   +justify-content(flex-start)
-  height: 100px
+  min-height: 100px
 
 .item-delete
   +flex(0 0 50px)
